@@ -1264,6 +1264,8 @@ ForInNode::ForInNode(JSGlobalData* globalData, const Identifier& ident, Expressi
 
 RegisterID* ForInNode::emitCode(CodeGenerator& generator, RegisterID* dst)
 {
+    if (!m_lexpr->isLocation())
+        return emitThrowError(generator, ReferenceError, "Left side of for-in statement is not a reference.");
     RefPtr<LabelID> loopStart = generator.newLabel();
     RefPtr<LabelID> continueTarget = generator.newLabel(); 
     RefPtr<LabelID> breakTarget = generator.newLabel(); 
